--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon"
+        href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRbhchfjWjAidS86iv7nfYEG__TZf7Kcs8X5LeKMMpB5YW9-zyYqBlGPxAxL09BWD8ap-E&usqp=CAU">
+    <script src="https://kit.fontawesome.com/c8503353a1.js" crossorigin="anonymous"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
